# bike-count-prediction-app

./: .coveragerc  .env.airflow  .env.production.template  .gitignore  .pre-commit-config.yaml  MLOPS_ROADMAP.md  MLOPS_WORK_SUMMARY.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.claude/: instructions.md
.devcontainer/: devcontainer.json
.dvc/: config
app/: model_registry_summary.py  streamlit_app.py
backend/regmodel/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/regmodel/app/: __init__.py  classes.py  fastapi_app.py  model_registry_summary.py  train.py
backend/regmodel/app/middleware/: prometheus_metrics.py
dags/: dag_daily_fetch_data.py  dag_daily_prediction.py  dag_monitor_and_train.py
data/: current_api_data.csv.dvc  current_data.csv.dvc  reference_data.csv.dvc  test_baseline.csv.dvc  test_sample.csv.dvc  train_baseline.csv.dvc
docs/: ARCHITECTURE_DIAGRAM_GUIDE.md  DEMO_SCRIPT.md  MLOPS_ROADMAP.md  TROUBLESHOOTING_AIRFLOW_INIT.md  alerting_setup.md  api-endpoints.md  architecture.md  backend.md  bigquery_setup.md  ci-cd.md  ci.md  cloudrun.md  dags.md  docker-compose.md  drift_strategy.md  dvc.md  fetch_data_strategy.md  grafana_dashboards.md  infrastructure.md  mlflow_cloudsql.md  monitoring.md  overlap_data_quality_validation.json  phase4_monitoring_implementation.md  prometheus_queries.md  pytest.md  schema_compatibility_fix.md  secrets.md  sliding_window.md  startup.md  temporal_continuity_audit.json  training_strategy.md  troubleshooting_wsl2_docker.md
monitoring/: add_champion_r2_baseline_column.sql  alerts.yml  (+1 more)
(+60 files in other folders)
