[project]
name = "regmodel-api"
version = "0.1.0"
description = "Regression Model API for bike traffic prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "fsspec>=2025.5.0",
    "gcsfs>=2025.5.0.post1",
    "google-cloud-storage>=2.10.0",
    "mlflow==2.22.0",
    "pandas>=2.2.3",
    "scikit-learn==1.6.1",
    "tensorflow-cpu>=2.16,<2.20",
    "uvicorn>=0.34.2",
]
